Review and Footer

--- a/N_Day.html
+++ b/N_Day.html
@@ -11,5 +11,139 @@
 			<img src="./res/rancidbanner1.png" />
 		</div>
 		<p id="heading">Saudi Arabia National Day (91)</p>
+		<div class="container">
+			<div id="left">
+				<img src="./res/freshlarge.png" alt="" />
+				<p>91</p>
+				<div class="reviews">
+					<div class="box">
+						<img class="icon" src="./res/fresh.gif" />
+						<p class="quote">
+							"A group of Saudi female students at Princess Nourah University
+							(PNU) in Riyadh joined a special project by modest clothing brand
+							Rina to design a whole collection that was launched on the Saudi
+							National day."
+						</p>
+					</div>
+					<div>
+						<img class="icon" src="./res/critic.gif" />
+						<p>Reem Ali</p>
+					</div>
+					<p><i>Arab News</i></p>
+
+					<div class="box">
+						<img class="icon" src="./res/rotten.gif" />
+						<p class="quote">
+							"SFA urges Saudis to walk for National Day. That was Great !!!!"
+						</p>
+					</div>
+					<div>
+						<img class="icon" src="./res/critic.gif" />
+						<p>Mark</p>
+					</div>
+					<p><i>Arab News</i></p>
+
+					<div class="box">
+						<img class="icon" src="./res/fresh.gif" />
+						<p class="quote">
+							"Congragelation from the heart to all the Saudi people and their
+							wise goverment on this great day"
+						</p>
+					</div>
+					<div>
+						<img class="icon" src="./res/critic.gif" />
+						<p>Adil Ghalib</p>
+					</div>
+					<p><i>KAU, Jeddah</i></p>
+
+					<div class="box">
+						<img class="icon" src="./res/fresh.gif" />
+						<p class="quote">
+							"I used to celebrate with my family in Kurnish but due COVID-19 we
+							celebrate at home..HAPPY Saudi NATIONAL DAY."
+						</p>
+					</div>
+					<div>
+						<img class="icon" src="./res/critic.gif" />
+						<p>Sarah Ahmed</p>
+					</div>
+					<p><i>KSU, Riyadh</i></p>
+
+					<div class="box">
+						<img class="icon" src="./res/critic.gif" />
+						<p class="quote">"I love Saudi Arabia."</p>
+					</div>
+					<div>
+						<img class="icon" src="./res/critic.gif" />
+						<p>Mohammed</p>
+					</div>
+
+					<div class="box">
+						<img class="icon" src="./res/fresh.gif" />
+						<p class="quote">
+							"I used to celebrate with my family in Kurnish but due COVID-19 we
+							celebrate at home..HAPPY Saudi NATIONAL DAY."
+						</p>
+					</div>
+					<div>
+						<img class="icon" src="./res/critic.gif" />
+						<p>Sarah Ahmed</p>
+					</div>
+					<p><i>KSU, Riyadh</i></p>
+
+					<div class="box">
+						<img class="icon" src="./res/fresh.gif" />
+						<p class="quote">
+							"I enjoyed the Fireworks in that day and my kids were very happy."
+						</p>
+					</div>
+					<div>
+						<img class="icon" src="./res/critic.gif" />
+						<p>Khalid Omar</p>
+					</div>
+					<p><i>IKEA, Jeddah</i></p>
+
+					<div class="box">
+						<img class="icon" src="./res/fresh.gif" />
+						<p class="quote">
+							"Each season in this day is themed to highlight defferent aspects
+							of Saudi Aabia heritage and culture"
+						</p>
+					</div>
+					<div>
+						<img class="icon" src="./res/critic.gif" />
+						<p>Fatima Ali</p>
+					</div>
+					<p><i>Saudi News</i></p>
+
+					<div class="box">
+						<img class="icon" src="./res/critic.gif" />
+						<p class="quote">
+							"I can't wait to celebrate the 100th annivarsary !"
+						</p>
+					</div>
+					<div>
+						<img class="icon" src="./res/critic.gif" />
+						<p>Khalid</p>
+					</div>
+					<p><i>KAU, Jeddah</i></p>
+
+					<div class="box">
+						<img class="icon" src="./res/critic.gif" />
+						<p class="quote">"We all love Saudi Arabia !!!"</p>
+					</div>
+					<div>
+						<img class="icon" src="./res/critic.gif" />
+						<p>Faris</p>
+					</div>
+					<p><i>KAU, Jeddah</i></p>
+				</div>
+			</div>
+
+			<div id="right">
+				<img src="./res/National Day.png" alt="" />
+			</div>
+		</div>
+		<footer>(1-10) of 88</footer>
 	</body>
 </html>
