--- a/N_Day.html
+++ b/N_Day.html
@@ -142,6 +142,49 @@
 
 			<div id="right">
 				<img src="./res/National Day.png" alt="" />
+				<p class="term">Kings who ruled over 20 years</p>
+				<ul class="nobullets indent">
+					<li>King Abdul Aziz</li>
+					<li>King Saud</li>
+					<li>King Faisal</li>
+					<li>King Khalid</li>
+					<li>King Fahad</li>
+					<li>King Abdullah</li>
+					<li>King Salman</li>
+				</ul>
+				<br />
+				<p class="term">Saudi Arabia Banner</p>
+				<p class="indent">
+					There is no god but Allah; Muhammad is the Messenger of Allah" banner
+				</p>
+				<br />
+				<p class="term">The Kingdom of Saudi Arabia Vision</p>
+				<p class="indent">Saudi Vision 2030</p>
+				<br />
+				<p class="term">The Kingdom of Saudi Arabia Vision</p>
+				<p class="indent">September 23, 202<strong>1</strong></p>
+				<br />
+				<p class="term">Celebration Day</p>
+				<p class="indent">
+					One the most important day, The Kingdom of Saudi Arabia's leadership
+					and people will celebrate this day
+				</p>
+				<br />
+				<p class="term">The greatest Achievements inspired by</p>
+				<p class="indent">Prince Mohammed Bin Salman</p>
+				<br />
+				<p class="term">LINKS</p>
+				<ul class="indent">
+					<li>
+						<a href="https://en.wikipedia.org/wiki/Saudi_National_Day"
+							>Saudi National Day - Wikipedia</a
+						>
+					</li>
+					<li>
+						<a href="https://www.vision2030.gov.sa/">Saudi Vision 2030</a>
+					</li>
+					<li><a href="#">Home</a></li>
+				</ul>
 			</div>
 		</div>
 		<footer>(1-10) of 88</footer>
